debug for windows and linux

--- a/nvim/snippets/package.json
+++ b/nvim/snippets/package.json
@@ -8,6 +8,10 @@
             {
                 "language": "python",
                 "path": "./python.json"
+            },
+            {
+                "language": "c",
+                "path": "./c.json"
             }
         ]
     }
