--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -8,7 +8,6 @@ $git_branch\
 $git_status\
 [](fg:#394260 bg:#212736)\
 $python\
-$golang\
 [](fg:#212736 bg:#1d2230)\
 $time\
 [ ](fg:#1d2230)\
@@ -35,10 +34,10 @@ format = '[[ $symbol $branch ](fg:#769ff0 bg:#394260)]($style)'
 style = "bg:#394260"
 format = '[[($all_status$ahead_behind )](fg:#769ff0 bg:#394260)]($style)'
 
-[golang]
-symbol = ""
+[python]
+symbol = " "
 style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+format = '[[ $symbol $version $virtualenv ](fg:#769ff0 bg:#212736)]($style)'
 
 [time]
 disabled = false
