--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -8,7 +8,6 @@ $git_branch\
 $git_status\
 [](fg:#394260 bg:#212736)\
 $python\
-[](fg:#212736 bg:#1d2230)\
 $time\
 [ ](fg:#1d2230)\
 \n$character"""
@@ -26,7 +25,7 @@ truncation_symbol = "…/"
 "Pictures" = " "
 
 [git_branch]
-symbol = ""
+symbol = ""
 style = "bg:#394260"
 format = '[[ $symbol $branch ](fg:#769ff0 bg:#394260)]($style)'
 
@@ -36,8 +35,8 @@ format = '[[($all_status$ahead_behind )](fg:#769ff0 bg:#394260)]($style)'
 
 [python]
 symbol = " "
-style = "bg:#212736"
-format = '[[ $symbol $version $virtualenv ](fg:#769ff0 bg:#212736)]($style)'
+style = "fg:#e5c07b bg:#1d2230"
+format = '[ $symbol $version ($virtualenv) ]($style)'
 
 [time]
 disabled = false
